--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2296,7 @@
        "Iskadarya95  13.10               3"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2326,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2340,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2420,7 +2420,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2472,11 +2472,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th>Splinter</th>\n",
+       "      <td>5.12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <th>Crucifer</th>\n",
+       "      <td>11.77</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <th>Verdict</th>\n",
+       "      <td>14.88</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <th>Phantomlight</th>\n",
+       "      <td>14.94</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <th>Bloodlord's Fetish</th>\n",
+       "      <td>8.50</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>50.76</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <th>Wolf, Promise of the Moonwalker</th>\n",
+       "      <td>26.88</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <th>Reaper's Toll</th>\n",
+       "      <td>8.30</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <th>Toothpick</th>\n",
+       "      <td>12.09</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <th>Dragon's Greatsword</th>\n",
+       "      <td>3.27</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Price  Purchase Count\n",
+       "Item ID Item Name                                                          \n",
+       "0       Splinter                                       5.12               4\n",
+       "1       Crucifer                                      11.77               4\n",
+       "2       Verdict                                       14.88               6\n",
+       "3       Phantomlight                                  14.94               6\n",
+       "4       Bloodlord's Fetish                             8.50               5\n",
+       "...                                                     ...             ...\n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm  50.76              12\n",
+       "179     Wolf, Promise of the Moonwalker               26.88               6\n",
+       "181     Reaper's Toll                                  8.30               5\n",
+       "182     Toothpick                                     12.09               3\n",
+       "183     Dragon's Greatsword                            3.27               3\n",
+       "\n",
+       "[179 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Group by item name, sort. Value_count to get purchase Count. Sum price, then divide by count"
+    "items = purchase_data.loc[:,[\"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "items['Purchase Count'] = 1\n",
+    "\n",
+    "# Sum purchase count and price\n",
+    "items = items.groupby(['Item ID','Item Name']).sum()\n",
+    "items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>59.99</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>50.76</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>44.10</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>41.22</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>34.80</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Price  Purchase Count\n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                  59.99              13\n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm  50.76              12\n",
+       "82      Nirvana                                       44.10               9\n",
+       "145     Fiery Glass Crusader                          41.22               9\n",
+       "103     Singed Scalpel                                34.80               8"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort popular items by descending price\n",
+    "items = items.sort_values(by='Price', ascending=False)\n",
+    "items = items.head(5)\n",
+    "items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item ID  Item Name                                   \n",
+       "92       Final Critic                                    4.614615\n",
+       "178      Oathbreaker, Last Hope of the Breaking Storm    4.230000\n",
+       "82       Nirvana                                         4.900000\n",
+       "145      Fiery Glass Crusader                            4.580000\n",
+       "103      Singed Scalpel                                  4.350000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Price of each top item\n",
+    "items_price = items[\"Price\"] / items[\"Purchase Count\"]\n",
+    "items_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>$34.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
+       "\n",
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "82      Nirvana                                           $4.90   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "103     Singed Scalpel                                    $4.35   \n",
+       "\n",
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                               $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "82      Nirvana                                                    $44.10  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "103     Singed Scalpel                                             $34.80  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rename and rearrange columns\n",
+    "items2 = pd.concat([items, items_price], axis=1)\n",
+    "\n",
+    "items2 = items2.rename(columns = {0: 'Item Price',\n",
+    "                                \"Price\": \"Total Purchase Value\"})\n",
+    "items2 = items2.reindex(columns = ['Purchase Count', 'Item Price', 'Total Purchase Value'])\n",
+    "items2\n",
+    "\n",
+    "# Format prices\n",
+    "items2[\"Item Price\"] = items2[\"Item Price\"].map(\"${:.2f}\".format)\n",
+    "items2[\"Total Purchase Value\"] = items2[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "\n",
+    "items2"
    ]
   },
   {
